tests/fixtures/invalid/pow_int_str_none.py
# Cannot call pow() with Int, Str, None
x = pow(1, "hello", None)
